Experiment: Extracted layout from index.

--- a/index.html
+++ b/index.html
@@ -1,55 +1,26 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Software Experiences by Robert Nickel</title>
-    <meta name="description"
-        content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-
-<body>
-
-    <div class="header">
-        <a href="/index.html">\\\&nbsp;Home</a>
-        <a href="/blog.html">\\\&nbsp;Blog</a>
-        <a href="/profile.html">\\\&nbsp;Profile</a>
-        <a href="/projects.html">\\\&nbsp;Projects</a>
-        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
+---
+layout: default
+---
+<div class="article-box" style="padding-top: 6em;">
+    <div class="profile">
+        <p class="heading">
+            TLDR </p>
+        <h1 class="title">
+            Me in 7 seconds
+        </h1>
+        <br><br>
+        <p>
+            Robert Nickel, former software engineer,</p>
+        <p>now master student of <a href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
+                engineering</a>,
+        </p>
+        <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile
+            software
+            engineering.</p>
+        <br><br>
+        <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
+        <div class="signpost"><a href="/being.html">Person</a></div><br>
+        <div class="signpost"><a href="/doing.html">Projects</a></div><br>
+        <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
     </div>
-
-    <div class="article-box" style="padding-top: 6em;">
-        <div class="profile">
-            <p class="heading">
-                TLDR </p>
-            <h1 class="title">
-                Me in 7 seconds
-            </h1>
-            <br><br>
-            <p>
-                Robert Nickel, former software engineer,</p>
-            <p>now master student of <a
-                    href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
-                    engineering</a>,
-            </p>
-            <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile
-                software
-                engineering.</p>
-            <br><br>
-            <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
-            <div class="signpost"><a href="/being.html">Person</a></div><br>
-            <div class="signpost"><a href="/doing.html">Projects</a></div><br>
-            <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
-        </div>
-    </div>
-    <br><br>
-    <div class="footer">
-        <a class="profile-comment" href="impressum.html">Impressum</a> ||
-        <a class="profile-comment" href="dsgvo.html">Data Protection</a>
-    </div>
-</body>
-
-</html>
+</div>
