Applied default layout to all pages.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="article-box" style="padding-top: 6em;">
+<div class="article-box">
+    <br><br>
     <div class="profile">
         <p class="heading">
             TLDR </p>
