--- a/profile.html
+++ b/profile.html
@@ -1,110 +1,90 @@
-<html>
+---
+layout: default
+---
+<div class="article-box">
+    <br><br>
+    <img src="profile.png" class="profile-image">
+    <br>
+    <div class="profile">
+        <p class="profile-comment">I am</p>
+        <p>Robert Nickel -- a (former) Software Engineer, Agile Advocate, Student of Computer Science (Software
+            Engineering) & Things Doer.</p><br>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Software Experiences by Robert Nickel</title>
-    <meta name="description"
-        content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
+        <p class="profile-comment">You can contact me at</p>
+        <p><a href="mailto:robert.nickel@aikq.de">robert.nickel@aikq.de</a></p><br>
 
-<body>
-    <div class="header">
-        <a href="/index.html">\\\&nbsp;Home</a>
-        <a href="/blog.html">\\\&nbsp;Blog</a>
-        <a href="/profile.html">\\\&nbsp;Profile</a>
-        <a href="/projects.html">\\\&nbsp;Projects</a>
-        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
-    </div>
-    <div class="article-box">
-        <br><br><br>
-        <img src="profile.png" class="profile-image">
+        <p class="profile-comment">for freelance job offerings, questions, improvement or project ideas, general
+            feedback, greetings, praise, critique, wishes, comments or anything else.</p>
+
+        <p>Skills & Experience:</p>
+        <table align="center">
+            <tr>
+                <td class="skill">Scala</td>
+                <td><canvas class="focus-points-canvas" data-points="2"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Golang</td>
+                <td><canvas class="focus-points-canvas" data-points="2"></canvas></td>
+            </tr>
+
+            <tr>
+                <td class="skill">Java</td>
+                <td><canvas class="focus-points-canvas" data-points="4"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Spring Boot</td>
+                <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Angular & Typescript</td>
+                <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">HTML, CSS & JavaScript</td>
+                <td><canvas class="focus-points-canvas" data-points="4"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Android App Dev</td>
+                <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Agile Mindset</td>
+                <td><canvas class="focus-points-canvas" data-points="5"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Software Craftsmanship</td>
+                <td><canvas class="focus-points-canvas" data-points="5"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Scrum & Kanban</td>
+                <td><canvas class="focus-points-canvas" data-points="5"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Software Quality & Testing</td>
+                <td><canvas class="focus-points-canvas" data-points="4"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">Distributed Systems Architecture</td>
+                <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
+            </tr>
+            <tr>
+                <td class="skill">UX Design & UI Design</td>
+                <td><canvas class="focus-points-canvas" data-points="2"></canvas></td>
+            </tr>
+        </table>
         <br>
-        <div class="profile">
-            <p class="profile-comment">I am</p>
-            <p>Robert Nickel -- a (former) Software Engineer, Agile Advocate, Student of Computer Science (Software
-                Engineering) & Things Doer.</p><br>
 
-            <p class="profile-comment">You can contact me at</p>
-            <p><a href="mailto:robert.nickel@aikq.de">robert.nickel@aikq.de</a></p><br>
-
-            <p class="profile-comment">for freelance job offerings, questions, improvement or project ideas, general
-                feedback, greetings, praise, critique, wishes, comments or anything else.</p>
-
-            <p>Skills & Experience:</p>
-            <table align="center">
-                <tr>
-                    <td class="skill">Scala</td>
-                    <td><canvas class="focus-points-canvas" data-points="2"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Golang</td>
-                    <td><canvas class="focus-points-canvas" data-points="2"></canvas></td>
-                </tr>
-
-                <tr>
-                    <td class="skill">Java</td>
-                    <td><canvas class="focus-points-canvas" data-points="4"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Spring Boot</td>
-                    <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Angular & Typescript</td>
-                    <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">HTML, CSS & JavaScript</td>
-                    <td><canvas class="focus-points-canvas" data-points="4"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Android App Dev</td>
-                    <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Agile Mindset</td>
-                    <td><canvas class="focus-points-canvas" data-points="5"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Software Craftsmanship</td>
-                    <td><canvas class="focus-points-canvas" data-points="5"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Scrum & Kanban</td>
-                    <td><canvas class="focus-points-canvas" data-points="5"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Software Quality & Testing</td>
-                    <td><canvas class="focus-points-canvas" data-points="4"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">Distributed Systems Architecture</td>
-                    <td><canvas class="focus-points-canvas" data-points="3"></canvas></td>
-                </tr>
-                <tr>
-                    <td class="skill">UX Design & UI Design</td>
-                    <td><canvas class="focus-points-canvas" data-points="2"></canvas></td>
-                </tr>
-            </table>
-            <br>
-
-            <p class="text">Since experiencing a whole lot of different tech-stacks I am increasingly
-                technology agnostic. Even knowing a technology today does not mean one still knows it tomorrow. We all
-                have to learn what we need all the time.</p>
-            <p class="text">
-                I see a lot of unneccessarily repeated mistakes (that originate
-                from unproductive mindsets) in the process of software engineering and do address them with the same amount of work as
-                coding itself. I believe in bottom-up change and the non-intuitiveness of agile software craftsmanship.
-            </p>
-        </div>
+        <p class="text">Since experiencing a whole lot of different tech-stacks I am increasingly
+            technology agnostic. Even knowing a technology today does not mean one still knows it tomorrow. We all
+            have to learn what we need all the time.</p>
+        <p class="text">
+            I see a lot of unneccessarily repeated mistakes (that originate
+            from unproductive mindsets) in the process of software engineering and do address them with the same amount
+            of work as
+            coding itself. I believe in bottom-up change and the non-intuitiveness of agile software craftsmanship.
+        </p>
     </div>
-    <div class="footer">
-        <a class="profile-comment" href="impressum.html">Impressum</a> ||
-        <a class="profile-comment" href="dsgvo.html">Data Protection</a>
-    </div>
-</body>
+</div>
 <script>
     window.onload = function () {
         var canvasses = document.getElementsByClassName("focus-points-canvas");
