--- a/newblog.html
+++ b/newblog.html
@@ -1,5 +1,8 @@
 ---
 layout: default
 ---
-
-this is where the new blog goes.
+<ul>
+    {% for post in site.posts %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+</ul>
