--- a/_posts/2020_12_28-pigeonhole-principle.html
+++ b/_posts/2020_12_28-pigeonhole-principle.html
@@ -1,10 +1,8 @@
-<p class="heading">
-    pigeonhole principle
-</p>
-<h1 class="title">
-    Too many pigeons for the holes?
-</h1>
-<p class="signature">By Robert Nickel - December 28, 2020</p>
+---
+layout: post
+title:  "Doing agile, a cynical definition"
+heading: "cynical: doing agile"
+---
 <p class="text">
     While learning for my discrete mathematics exam, I stumbled across the <a
         href="https://www.youtube.com/watch?v=2-mxYrCNX60">pigeonhole principle</a>. A pigeonhole is where
