--- a/newblog.html
+++ b/newblog.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<h1 class="title">
+    All articles
+</h1>
 <ul>
     {% for post in site.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
