styling margins at the top

--- a/_posts/2020-12-28-pigeonhole-principle.html
+++ b/_posts/2020-12-28-pigeonhole-principle.html
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Doing agile, a cynical definition"
-heading: "cynical: doing agile"
+title: "Doing agile, a cynical definition"
+heading: "pigeonhole principle"
 ---
+
 <p class="text">
     While learning for my discrete mathematics exam, I stumbled across the <a
         href="https://www.youtube.com/watch?v=2-mxYrCNX60">pigeonhole principle</a>. A pigeonhole is where
