--- a/newblog.html
+++ b/newblog.html
@@ -5,7 +5,7 @@ layout: default
     All articles
 </h1>
 <ul>
-    {% for post in site.posts %}
+    {% for post in site.posts reversed %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
