--- a/newblog.html
+++ b/newblog.html
@@ -4,8 +4,6 @@ layout: default
 <h1 class="title">
     All articles
 </h1>
-<ul>
-    {% for post in site.posts reversed %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-</ul>
+{% for post in site.posts reversed %}
+    {{ post }}
+{% endfor %}
