--- a/newblog.html
+++ b/newblog.html
@@ -1,9 +1,6 @@
 ---
 layout: default
 ---
-<h1 class="title">
-    All articles
-</h1>
-{% for post in site.posts reversed %}
+{% for post in site.posts %}
     {{ post }}
 {% endfor %}
