removed class="text" for every paragraph except blog and profile. Added it to body.

--- a/_posts/2020-12-18-a-lumberjack-metaphor.html
+++ b/_posts/2020-12-18-a-lumberjack-metaphor.html
@@ -4,7 +4,7 @@ title: "Software Engineers are Lumberjacks, Features are Trees"
 heading: "A lumberjack metaphor"
 ---
 
-<p class="text">
+<p>
     To illustrate 12 very important aspects of agile software engineering, I want to use the oversimplified
     metaphor of lumberjacking. A forester, who represents the product owner, leads a team of lumberjacks,
     which is the development team, to the most important trees to cut down. The trees represent features or
@@ -56,7 +56,7 @@ heading: "A lumberjack metaphor"
     </li>
 </ol>
 
-<p class="text"> To be honest, I do not know so much about lumberjacking or foresting, so forgive my
+<p> To be honest, I do not know so much about lumberjacking or foresting, so forgive my
     oversimplification and maybe misconceptions. The goal is to write about software engineering
     metaphorically,
     and I find some concepts easy to understand using these wooden examples. I have a more detailled and
