--- a/profile.html
+++ b/profile.html
@@ -73,10 +73,10 @@ layout: default
     </table>
     <br>
 
-    <p class="text">Since experiencing a whole lot of different tech-stacks I am increasingly
+    <p>Since experiencing a whole lot of different tech-stacks I am increasingly
         technology agnostic. Even knowing a technology today does not mean one still knows it tomorrow. We all
         have to learn what we need all the time.</p>
-    <p class="text">
+    <p>
         I see a lot of unneccessarily repeated mistakes (that originate
         from unproductive mindsets) in the process of software engineering and do address them with the same amount
         of work as
