Added padder, which was removed from default.

--- a/impressum.html
+++ b/impressum.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1 class="title">Impressum</h1>
-<div class='text'>
+<div class="padder">
     <p>Angaben gem&auml;&szlig; &sect; 5 TMG</p>
     <p>Robert Nickel <br>
         Scheffelstra&szlig;e 46<br>
