--- a/dsgvo.html
+++ b/dsgvo.html
@@ -2,96 +2,99 @@
 layout: default
 ---
 <h1 class="title">Datenschutzerkl&auml;rung</h1>
-<div class='text'>
-    <p><strong>Datenschutz</strong></p>
+<div class="padder">
 
-    Wir haben diese Datenschutzerkl&auml;rung (Fassung 28.07.2020-311198570) verfasst, um Ihnen gem&auml;&szlig; der
-    Vorgaben der Datenschutz-Grundverordnung (EU) 2016/679 zu erkl&auml;ren, welche Informationen wir sammeln, wie
-    wir Daten verwenden und welche Entscheidungsm&ouml;glichkeiten Sie als Besucher dieser Webseite haben.
-    Leider liegt es in der Natur der Sache, dass diese Erkl&auml;rungen sehr technisch klingen, wir haben uns bei
-    der Erstellung jedoch bem&uuml;ht die wichtigsten Dinge so einfach und klar wie m&ouml;glich zu beschreiben.
+    <div>
+        <p><strong>Datenschutz</strong></p>
 
-    <p><strong>Automatische Datenspeicherung</strong></p>
-    Wenn Sie heutzutage Webseiten besuchen, werden gewisse Informationen automatisch erstellt und gespeichert, so
-    auch auf dieser Webseite.
+        Wir haben diese Datenschutzerkl&auml;rung (Fassung 28.07.2020-311198570) verfasst, um Ihnen gem&auml;&szlig; der
+        Vorgaben der Datenschutz-Grundverordnung (EU) 2016/679 zu erkl&auml;ren, welche Informationen wir sammeln, wie
+        wir Daten verwenden und welche Entscheidungsm&ouml;glichkeiten Sie als Besucher dieser Webseite haben.
+        Leider liegt es in der Natur der Sache, dass diese Erkl&auml;rungen sehr technisch klingen, wir haben uns bei
+        der Erstellung jedoch bem&uuml;ht die wichtigsten Dinge so einfach und klar wie m&ouml;glich zu beschreiben.
 
-    Wenn Sie unsere Webseite so wie jetzt gerade besuchen, speichert unser Webserver (Computer auf dem diese
-    Webseite gespeichert ist) automatisch Daten wie
+        <p><strong>Automatische Datenspeicherung</strong></p>
+        Wenn Sie heutzutage Webseiten besuchen, werden gewisse Informationen automatisch erstellt und gespeichert, so
+        auch auf dieser Webseite.
 
-    die Adresse (URL) der aufgerufenen Webseite
-    Browser und Browserversion
-    das verwendete Betriebssystem
-    die Adresse (URL) der zuvor besuchten Seite (Referrer URL)
-    den Hostname und die IP-Adresse des Ger&auml;ts von welchem aus zugegriffen wird
-    Datum und Uhrzeit
+        Wenn Sie unsere Webseite so wie jetzt gerade besuchen, speichert unser Webserver (Computer auf dem diese
+        Webseite gespeichert ist) automatisch Daten wie
 
-    in Dateien (Webserver-Logfiles).
+        die Adresse (URL) der aufgerufenen Webseite
+        Browser und Browserversion
+        das verwendete Betriebssystem
+        die Adresse (URL) der zuvor besuchten Seite (Referrer URL)
+        den Hostname und die IP-Adresse des Ger&auml;ts von welchem aus zugegriffen wird
+        Datum und Uhrzeit
 
-    In der Regel werden Webserver-Logfiles zwei Wochen gespeichert und danach automatisch gel&ouml;scht. Wir geben
-    diese Daten nicht weiter, k&ouml;nnen jedoch nicht ausschlie&szlig;en, dass diese Daten beim Vorliegen von
-    rechtswidrigem Verhalten eingesehen werden.
+        in Dateien (Webserver-Logfiles).
 
-    <p><strong>Speicherung pers&ouml;nlicher Daten</strong></p>
+        In der Regel werden Webserver-Logfiles zwei Wochen gespeichert und danach automatisch gel&ouml;scht. Wir geben
+        diese Daten nicht weiter, k&ouml;nnen jedoch nicht ausschlie&szlig;en, dass diese Daten beim Vorliegen von
+        rechtswidrigem Verhalten eingesehen werden.
 
-    Pers&ouml;nliche Daten, die Sie uns auf dieser Website elektronisch &uuml;bermitteln, wie zum Beispiel Name,
-    E-Mail-Adresse, Adresse oder andere pers&ouml;nlichen Angaben im Rahmen der &uuml;bermittlung eines Formulars
-    oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils
-    angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.
+        <p><strong>Speicherung pers&ouml;nlicher Daten</strong></p>
 
-    Wir nutzen Ihre pers&ouml;nlichen Daten somit nur f&uuml;r die Kommunikation mit jenen Besuchern, die Kontakt
-    ausdr&uuml;cklich w&uuml;nschen und f&uuml;r die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen
-    und Produkte. Wir geben Ihre pers&ouml;nlichen Daten ohne Zustimmung nicht weiter, k&ouml;nnen jedoch nicht
-    ausschlie&szlig;en, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.
+        Pers&ouml;nliche Daten, die Sie uns auf dieser Website elektronisch &uuml;bermitteln, wie zum Beispiel Name,
+        E-Mail-Adresse, Adresse oder andere pers&ouml;nlichen Angaben im Rahmen der &uuml;bermittlung eines Formulars
+        oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils
+        angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.
 
-    Wenn Sie uns pers&ouml;nliche Daten per E-Mail schicken – somit abseits dieser Webseite – k&ouml;nnen wir keine
-    sichere &uuml;bertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals
-    unverschl&uuml;sselt per E-Mail zu &uuml;bermitteln.
+        Wir nutzen Ihre pers&ouml;nlichen Daten somit nur f&uuml;r die Kommunikation mit jenen Besuchern, die Kontakt
+        ausdr&uuml;cklich w&uuml;nschen und f&uuml;r die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen
+        und Produkte. Wir geben Ihre pers&ouml;nlichen Daten ohne Zustimmung nicht weiter, k&ouml;nnen jedoch nicht
+        ausschlie&szlig;en, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.
 
-    Die Rechtsgrundlage besteht nach Artikel 6 Absatz 1 a DSGVO (Rechtm&auml;&szlig;igkeit der Verarbeitung) darin,
-    dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&ouml;nnen diesen
-    Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im
-    Impressum.
-    Rechte laut Datenschutzgrundverordnung
+        Wenn Sie uns pers&ouml;nliche Daten per E-Mail schicken – somit abseits dieser Webseite – k&ouml;nnen wir keine
+        sichere &uuml;bertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals
+        unverschl&uuml;sselt per E-Mail zu &uuml;bermitteln.
 
-    Ihnen stehen laut den Bestimmungen der DSGVO grunds&auml;tzlich die folgende Rechte zu:
+        Die Rechtsgrundlage besteht nach Artikel 6 Absatz 1 a DSGVO (Rechtm&auml;&szlig;igkeit der Verarbeitung) darin,
+        dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&ouml;nnen diesen
+        Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im
+        Impressum.
+        Rechte laut Datenschutzgrundverordnung
 
-    Recht auf Berichtigung (Artikel 16 DSGVO)
-    Recht auf L&ouml;schung („Recht auf Vergessenwerden“) (Artikel 17 DSGVO)
-    Recht auf Einschr&auml;nkung der Verarbeitung (Artikel 18 DSGVO)
-    Recht auf Benachrichtigung – Mitteilungspflicht im Zusammenhang mit der Berichtigung oder L&ouml;schung
-    personenbezogener Daten oder der Einschr&auml;nkung der Verarbeitung (Artikel 19 DSGVO)
-    Recht auf Daten&uuml;bertragbarkeit (Artikel 20 DSGVO)
-    Widerspruchsrecht (Artikel 21 DSGVO)
-    Recht, nicht einer ausschlie&szlig;lich auf einer automatisierten Verarbeitung — einschlie&szlig;lich Profiling
-    — beruhenden Entscheidung unterworfen zu werden (Artikel 22 DSGVO)
+        Ihnen stehen laut den Bestimmungen der DSGVO grunds&auml;tzlich die folgende Rechte zu:
 
-    Wenn Sie glauben, dass die Verarbeitung Ihrer Daten gegen das Datenschutzrecht verst&ouml;&szlig;t oder Ihre
-    datenschutzrechtlichen Anspr&uuml;che sonst in einer Weise verletzt worden sind, k&ouml;nnen Sie sich an die
-    Bundesbeauftragte f&uuml;r den Datenschutz und die Informationsfreiheit (BfDI) wenden.
-    Auswertung des Besucherverhaltens
+        Recht auf Berichtigung (Artikel 16 DSGVO)
+        Recht auf L&ouml;schung („Recht auf Vergessenwerden“) (Artikel 17 DSGVO)
+        Recht auf Einschr&auml;nkung der Verarbeitung (Artikel 18 DSGVO)
+        Recht auf Benachrichtigung – Mitteilungspflicht im Zusammenhang mit der Berichtigung oder L&ouml;schung
+        personenbezogener Daten oder der Einschr&auml;nkung der Verarbeitung (Artikel 19 DSGVO)
+        Recht auf Daten&uuml;bertragbarkeit (Artikel 20 DSGVO)
+        Widerspruchsrecht (Artikel 21 DSGVO)
+        Recht, nicht einer ausschlie&szlig;lich auf einer automatisierten Verarbeitung — einschlie&szlig;lich Profiling
+        — beruhenden Entscheidung unterworfen zu werden (Artikel 22 DSGVO)
 
-    In der folgenden Datenschutzerkl&auml;rung informieren wir Sie dar&uuml;ber, ob und wie wir Daten Ihres Besuchs
-    dieser Website auswerten. Die Auswertung der gesammelten Daten erfolgt in der Regel anonym und wir k&ouml;nnen
-    von Ihrem Verhalten auf dieser Website nicht auf Ihre Person schlie&szlig;en.
+        Wenn Sie glauben, dass die Verarbeitung Ihrer Daten gegen das Datenschutzrecht verst&ouml;&szlig;t oder Ihre
+        datenschutzrechtlichen Anspr&uuml;che sonst in einer Weise verletzt worden sind, k&ouml;nnen Sie sich an die
+        Bundesbeauftragte f&uuml;r den Datenschutz und die Informationsfreiheit (BfDI) wenden.
+        Auswertung des Besucherverhaltens
 
-    Mehr &uuml;ber M&ouml;glichkeiten dieser Auswertung der Besuchsdaten zu widersprechen erfahren Sie in der
-    folgenden Datenschutzerkl&auml;rung.
+        In der folgenden Datenschutzerkl&auml;rung informieren wir Sie dar&uuml;ber, ob und wie wir Daten Ihres Besuchs
+        dieser Website auswerten. Die Auswertung der gesammelten Daten erfolgt in der Regel anonym und wir k&ouml;nnen
+        von Ihrem Verhalten auf dieser Website nicht auf Ihre Person schlie&szlig;en.
 
-    <p><strong>TLS-Verschl&uuml;sselung mit https</strong></p>
-    Wir verwenden https um Daten abh&ouml;rsicher im Internet zu &uuml;bertragen (Datenschutz durch
-    Technikgestaltung Artikel 25 Absatz 1 DSGVO). Durch den Einsatz von TLS (Transport Layer Security), einem
-    Verschl&uuml;sselungsprotokoll zur sicheren Daten&uuml;bertragung im Internet k&ouml;nnen wir den Schutz
-    vertraulicher Daten sicherstellen. Sie erkennen die Benutzung dieser Absicherung der Daten&uuml;bertragung am
-    kleinen Schlo&szlig;symbol links oben im Browser und der Verwendung des Schemas https (anstatt http) als Teil
-    unserer Internetadresse.
-    <p><strong>Newsletter Datenschutzerkl&auml;rung</strong></p>
+        Mehr &uuml;ber M&ouml;glichkeiten dieser Auswertung der Besuchsdaten zu widersprechen erfahren Sie in der
+        folgenden Datenschutzerkl&auml;rung.
 
-    Wenn Sie sich f&uuml;r unseren Newsletter eintragen &uuml;bermitteln Sie die oben genannten pers&ouml;nlichen
-    Daten und geben uns das Recht Sie per E-Mail zu kontaktieren. Die im Rahmen der Anmeldung zum Newsletter
-    gespeicherten Daten nutzen wir ausschlie&szlig;lich f&uuml;r unseren Newsletter und geben diese nicht weiter.
+        <p><strong>TLS-Verschl&uuml;sselung mit https</strong></p>
+        Wir verwenden https um Daten abh&ouml;rsicher im Internet zu &uuml;bertragen (Datenschutz durch
+        Technikgestaltung Artikel 25 Absatz 1 DSGVO). Durch den Einsatz von TLS (Transport Layer Security), einem
+        Verschl&uuml;sselungsprotokoll zur sicheren Daten&uuml;bertragung im Internet k&ouml;nnen wir den Schutz
+        vertraulicher Daten sicherstellen. Sie erkennen die Benutzung dieser Absicherung der Daten&uuml;bertragung am
+        kleinen Schlo&szlig;symbol links oben im Browser und der Verwendung des Schemas https (anstatt http) als Teil
+        unserer Internetadresse.
+        <p><strong>Newsletter Datenschutzerkl&auml;rung</strong></p>
 
-    Sollten Sie sich vom Newsletter abmelden – Sie finden den Link daf&uuml;r in jedem Newsletter ganz unten – dann
-    l&ouml;schen wir alle Daten die mit der Anmeldung zum Newsletter gespeichert wurden.
+        Wenn Sie sich f&uuml;r unseren Newsletter eintragen &uuml;bermitteln Sie die oben genannten pers&ouml;nlichen
+        Daten und geben uns das Recht Sie per E-Mail zu kontaktieren. Die im Rahmen der Anmeldung zum Newsletter
+        gespeicherten Daten nutzen wir ausschlie&szlig;lich f&uuml;r unseren Newsletter und geben diese nicht weiter.
 
-    Quelle: Erstellt mit dem Datenschutz Generator von AdSimple in Kooperation mit 123familie.de
+        Sollten Sie sich vom Newsletter abmelden – Sie finden den Link daf&uuml;r in jedem Newsletter ganz unten – dann
+        l&ouml;schen wir alle Daten die mit der Anmeldung zum Newsletter gespeichert wurden.
+
+        Quelle: Erstellt mit dem Datenschutz Generator von AdSimple in Kooperation mit 123familie.de
+    </div>
 </div>
