Add RSS Feed button

--- a/newblog.html
+++ b/newblog.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<a href="/feed.xml" class="heading">
+    Subscribe RSS Feed
+</a><br>
+
 {% for post in site.posts %}
     {{ post }}
 {% endfor %}
