--- a/newblog.html
+++ b/newblog.html
@@ -2,10 +2,8 @@
 layout: default
 ---
 
-<a href="/feed.xml" class="heading">
-    Subscribe RSS Feed
-</a><br>
+<a href="/feed.xml" style="text-align: center">Subscribe RSS Feed</a><br>
 
 {% for post in site.posts %}
-    {{ post }}
+{{ post }}
 {% endfor %}
