Removed broken styling and added newlines on home.

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<a href="/feed.xml" style="text-align: right;">Subscribe RSS Feed</a><br>
+<a href="/feed.xml">Subscribe RSS Feed</a><br>
 
 {% for post in site.posts %}
 {{ post }}
