Pushing around the RSS Feed button.

--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<a href="/feed.xml">Subscribe RSS Feed</a><br>
 
 {% for post in site.posts %}
 {{ post }}
+<a href="/feed.xml" style="font-size: 0.6">Subscribe RSS Feed</a><br>
 {% endfor %}
