--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,6 @@ layout: default
 
 
 {% for post in site.posts %}
+<a href="/feed.xml" style="font-size: .7em;float:right;">Subscribe RSS Feed</a><br>
 {{ post }}
-<a href="/feed.xml" style="font-size: 0.6">Subscribe RSS Feed</a><br>
 {% endfor %}
