--- a/_posts/2019-07-08-thinking-humble.html
+++ b/_posts/2019-07-08-thinking-humble.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: "The quality of an answer to an open question"
-heading: "Thinking humble"
+title: The quality of an answer to an open question
+heading: Thinking humble
+categories: [Thinking]
 ---
 
 <p>
