--- a/_posts/2019-08-29-scaling-innovation.html
+++ b/_posts/2019-08-29-scaling-innovation.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: "The McDonald's of Software Development"
-heading: "Scaling innovation"
+title: The McDonald's of Software Development
+heading: Scaling innovation
+categories: [Thinking]
 ---
 
 <p>
