--- a/_posts/2020-03-08-segregating-responsibility.html
+++ b/_posts/2020-03-08-segregating-responsibility.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: "The two dimensions of an increment"
-heading: "Segregating responsibility"
+title: The two dimensions of an increment
+heading: Segregating responsibility
+categories: [Agile]
 ---
 
 <p>
