--- a/_posts/2020-06-05-closing-feedback-loops.html
+++ b/_posts/2020-06-05-closing-feedback-loops.html
@@ -2,6 +2,8 @@
 layout: post
 title: "Hammurabis understanding of evolutionary loops"
 heading: "Closing feedback loops"
+categories: [Thinking, Agile]
+
 ---
 
 <p>
