--- a/_posts/2020-12-18-a-lumberjack-metaphor.html
+++ b/_posts/2020-12-18-a-lumberjack-metaphor.html
@@ -1,7 +1,9 @@
 ---
 layout: post
-title: "Software Engineers are Lumberjacks, Features are Trees"
-heading: "A lumberjack metaphor"
+title: Software Engineers are Lumberjacks, Features are Trees
+heading: A lumberjack metaphor
+categories: [Agile]
+
 ---
 
 <p>
