--- a/_posts/2020-12-28-pigeonhole-principle.html
+++ b/_posts/2020-12-28-pigeonhole-principle.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: "Too many pigeons for the holes?"
-heading: "pigeonhole principle"
+title: Too many pigeons for the holes?
+heading: pigeonhole principle
+categories: [Thinking]
 ---
 
 <p>
