--- a/_posts/2018-05-03-being-cohesive.html
+++ b/_posts/2018-05-03-being-cohesive.html
@@ -1,7 +1,9 @@
 ---
 layout: post
-title: "Only split a story, when it is too big?"
-heading: "Being cohesive"
+title: Only split a story, when it is too big?
+heading: Being cohesive
+categories: [Agile]
+
 ---
 
 <p>
