Use direct links on index.html.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
         software
         engineering.</p>
     <br><br>
-    <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
-    <div class="signpost"><a href="/being.html">Person</a></div><br>
-    <div class="signpost"><a href="/doing.html">Projects</a></div><br>
+    <div class="signpost"><a href="/blog.html">Blog</a></div><br>
+    <div class="signpost"><a href="/profile.html">Person</a></div><br>
+    <div class="signpost"><a href="/projects.html">Projects</a></div><br>
     <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
 </div>
 <br>
