Added posts for all the projects

--- a/_posts/2018-05-03-being-cohesive.html
+++ b/_posts/2018-05-03-being-cohesive.html
@@ -2,8 +2,7 @@
 layout: post
 title: Only split a story, when it is too big?
 heading: Being cohesive
-categories: [Agile]
-
+categories: Agile
 ---
 
 <p>
