--- a/_posts/2019-04-15-rethink-everything.html
+++ b/_posts/2019-04-15-rethink-everything.html
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Refining the whole product after 2 years.. and maaan, where did we go?
-heading: [Agile]
+heading: Rethink everything
+categories: Agile
 ---
 
 <p>
