--- a/_posts/2019-07-08-thinking-humble.html
+++ b/_posts/2019-07-08-thinking-humble.html
@@ -2,7 +2,7 @@
 layout: post
 title: The quality of an answer to an open question
 heading: Thinking humble
-categories: [Thinking]
+categories: Thinking
 ---
 
 <p>
