--- a/_posts/2019-08-29-scaling-innovation.html
+++ b/_posts/2019-08-29-scaling-innovation.html
@@ -2,7 +2,7 @@
 layout: post
 title: The McDonald's of Software Development
 heading: Scaling innovation
-categories: [Thinking]
+categories: Thinking
 ---
 
 <p>
