--- a/_posts/2020-12-28-pigeonhole-principle.html
+++ b/_posts/2020-12-28-pigeonhole-principle.html
@@ -2,7 +2,7 @@
 layout: post
 title: Too many pigeons for the holes?
 heading: pigeonhole principle
-categories: [Thinking]
+categories: Thinking
 ---
 
 <p>
