--- a/_posts/2018-03-26-welcome.html
+++ b/_posts/2018-03-26-welcome.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Hello World!"
-heading: "Welcome"
-categories: [Personal]
+title: Hello World!
+heading: Welcome
+categories: Personal
 ---
 
 <p>
