--- a/_posts/2020-03-08-segregating-responsibility.html
+++ b/_posts/2020-03-08-segregating-responsibility.html
@@ -2,7 +2,7 @@
 layout: post
 title: The two dimensions of an increment
 heading: Segregating responsibility
-categories: [Agile]
+categories: Agile
 ---
 
 <p>
@@ -20,7 +20,7 @@ categories: [Agile]
     to
     as functional), and the technical perspective.
 
-    <img src="segregating-responsibility/increment_dimensions.png"></img>
+    <img src="images/increment_dimensions.png"></img>
 
     Business people are those that work on the business perspective of an increment, by defining and
     refining
