--- a/_posts/2020-12-18-a-lumberjack-metaphor.html
+++ b/_posts/2020-12-18-a-lumberjack-metaphor.html
@@ -2,8 +2,7 @@
 layout: post
 title: Software Engineers are Lumberjacks, Features are Trees
 heading: A lumberjack metaphor
-categories: [Agile]
-
+categories: Agile
 ---
 
 <p>
