--- a/impressum.html
+++ b/impressum.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1 class="title">Impressum</h1>
+<h1>Impressum</h1>
 <p>Angaben gem&auml;&szlig; &sect; 5 TMG</p>
 <p>Robert Nickel <br>
     Scheffelstra&szlig;e 46<br>
