--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@ layout: default
 ---
 <br><br>
 <div class="profile">
-    <p class="heading">
-        TLDR </p>
-    <h1 class="title">
+    <h2> TLDR </h2>
+    <h1>
         Me in 7 seconds
     </h1>
-    <br><br>
     <p>
         Robert Nickel, former software engineer,</p>
     <p>now master student of <a href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
