Renamed category project to projects

--- a/_posts/2020-09-09-schedule-bot.html
+++ b/_posts/2020-09-09-schedule-bot.html
@@ -2,7 +2,7 @@
 layout: post
 title: I built a Telegram Bot for pupils/students schedule (MyScheduleRobot)
 heading: A Telegram Bot
-categories: Project
+categories: Projects
 ---
 <p>
     My younger brother tried to build a telegram bot, that gives him some information about his schedule,
