--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@ layout: default
 <img style="margin-top: 3em" src="profile.png" class="profile-image">
 <br>
 <div class="profile">
-    <p>I am Robert Nickel -- a (former) Software Engineer, Agile Advocate, Student of Computer Science (Software
+    <p>I am Robert Nickel -- Software Engineer, Agile Advocate, Student of Computer Science (Software
         Engineering) & Things Doer.</p><br>
 
     <p>Contact: <a href="mailto:robert.nickel@aikq.de">robert.nickel@aikq.de</a></p>
