--- a/_pages/works.html
+++ b/_pages/works.html
@@ -1,7 +1,7 @@
 ---
 title: Portfolio
 layout: page
-permalink: /portfolio/
+permalink: /works/
 ---
 
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
