--- a/_pages/radolfzell.html
+++ b/_pages/radolfzell.html
@@ -13,7 +13,7 @@ image: /assets/images/radolfzell.jpg
 
 <p>Im Zuge der Pandemie biete ich Geschäften, Firmen und Praxen aus Radolfzell für kleines Geld eine moderne und sichere
   Internetpräsenz in Form einer Webseite oder eines Onlineshops an. Ich bin fest davon überzeugt, dass es nie zuvor so
-  wichtig war wie jetzt, eine digitale Visitenkarte zu haben, die etwas hermacht. Ob Sie mit Waren handeln, sie
+  wichtig war eine digitale Visitenkarte zu haben, die etwas hermacht. Ob Sie mit Waren handeln, sie
   produzieren, Dienstleistungen anbieten oder eine Praxis haben: <b>Ihre Webseite sollte schnell, sicher und für
     Smartphones optimiert sein.</b></p>
 
