--- a/_pages/radolfzell.html
+++ b/_pages/radolfzell.html
@@ -79,5 +79,14 @@ image: /assets/images/radolfzell.jpg
 <p><b>Für Webseiten und Shops gelten rechtliche Anforderungen in Deutschland und in der EU, die eingehalten werden
     müssen. Diese Verantwortung, wie auch die für alle anderen Inhalte Ihrer Webseite oder Ihres Shops, kann ich nicht
     übernehmen.</b></p>
+<p><i>Ich habe bereits eine Webseite, die ist allerdings etwas veraltet (z.B. schlecht für Smartphones). Wie wird damit
+    umgegangen?</i></p>
+<p><b>In den meisten Fällen ist es eine gute Sache, eine bestehende Webseite zu haben, da diese als Erfahrungswert
+    betrachtet werden kann, die für den Aufbau einen moderneren Seite maßgebliche Hinweise liefern kann. Und eine
+    bestehende Internetadresse kann natürlich problemlos auf die neue Seite "umgelenkt" werden, so dass Sie Ihre Flyer
+    nicht neu drucken müssen!</b></p>
 
+<br>
+<hr>
+<br>
 Alle Angaben ohne Gewähr.
