typo und DS_Store

--- a/_pages/radolfzell.html
+++ b/_pages/radolfzell.html
@@ -19,7 +19,7 @@ image: /assets/images/radolfzell.jpg
 
 <h4>Der Clou: Es gibt keine initialen Kosten und keine Kündigungsfrist, und somit auch kein Risiko.</h4>
 
-<p>Anhand eines monatlichen Abos baue und betreibe Ihre individuelle Internetpräsenz und
+<p>Anhand eines monatlichen Abos baue und betreibe ich Ihre individuelle Internetpräsenz und
   decke alle technischen Aspekte ab, so dass Sie es ohne Risiko einmal ausprobieren können.
   Nur die Inhalte der Seite müssen Sie noch selbst liefern!</p>
 
