--- a/_pages/impressum.html
+++ b/_pages/impressum.html
@@ -16,13 +16,13 @@ permalink: /impressum/
   </p>
   <p><strong>Kontakt:</strong> <br>
     Telefon: 01578-6190618<br>
-    E-Mail: <a href='mailto:robert.nickel@aikq.de'>robert.nickel@aikq.de</a></br></p>
+    E-Mail: <a href='mailto:contact@robertnickel.online'>contact@robertnickel.online</a></br></p>
   <p><strong>Umsatzsteuer-ID: </strong> <br>
     Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: DE326611022<br>
   </p>
   <p><strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong><br>
     Robert Nickel <br>
-    Scheffelstr. 46<br>
+    Regiment-Piemont-Str. 10<br>
     78315 Radolfzell am Bodensee <br></p>
   <p><strong>Haftungsausschluss: </strong><br><br><strong>Haftung für Inhalte</strong><br><br>
     Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität
