--- a/_pages/impressum.html
+++ b/_pages/impressum.html
@@ -8,7 +8,7 @@ permalink: /impressum/
   <h1>Impressum</h1>
   <p>Angaben gemäß § 5 TMG</p>
   <p>Robert Nickel <br>
-    Scheffelstr. 46<br>
+    Regiment-Piemont-Str. 10<br>
     78315 Radolfzell am Bodensee <br>
   </p>
   <p> <strong>Vertreten durch: </strong><br>
