--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@ layout: default
     <div class="grid md:grid-cols-12 gap-8">
       {% include sidebar.html %}
       <main class="col-span-12 md:col-span-8 shadow-lg rounded-lg bg-white p-4 md:p-8 overflow-hidden">
-        {% include about.html %} {% include
-        services.html %} {% include works.html %} {%
-        include blogs.html %} {% include hire-me.html %}
+        {% include about.html %}
+        {% include services.html %}
+        {% include works.html %}
+        {% include blogs.html %}
+        {% include books.html %}
+        {% include hire-me.html %}
       </main>
       {% include footer.html %}
     </div>
