--- a/_pages/work.html
+++ b/_pages/work.html
@@ -5,7 +5,7 @@ permalink: /work/
 ---
 
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-  {% for work in site.works %} {% if work.image %}
+  {% for work in site.work %} {% if work.image %}
   <a href="{{work.url}}" class="no-underline">
     <img
       src="/assets/images/onepx.png"
