--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <main class="col-span-12 md:col-span-8 shadow-lg rounded-lg bg-white p-4 md:p-8 overflow-hidden">
         {% include about.html %}
         {% include services.html %}
-        {% include works.html %}
+        {% include work.html %}
         {% include blogs.html %}
         {% include books.html %}
         {% include hire-me.html %}
